[gd_scene load_steps=13 format=3 uid="uid://cwi3q1rtn66vu"]

[ext_resource type="Theme" uid="uid://bwnv8b362a2w7" path="res://menus/menu_theme.tres" id="1_enutq"]
[ext_resource type="Script" path="res://menus/level_finish.gd" id="2_y7mer"]
[ext_resource type="PackedScene" uid="uid://bm7ghcdrm434f" path="res://ui/pause_background.tscn" id="3_xjx3r"]
[ext_resource type="Texture2D" uid="uid://f31wo0r2o6kq" path="res://assets/art/ui/no_badge.png" id="4_y8tmw"]
[ext_resource type="PackedScene" uid="uid://joajaspr73lg" path="res://menus/scores/ScoreItem.tscn" id="9_nda4h"]
[ext_resource type="PackedScene" uid="uid://bn0833ujao2xi" path="res://menus/settings_menu.tscn" id="10_vxanx"]
[ext_resource type="PackedScene" uid="uid://cgn5lp08830p8" path="res://ui/transition.tscn" id="11_fi5xr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7or8m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wngb5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ki7h5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ami28"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lk4b2"]

[node name="level_finish" type="ColorRect"]
process_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_enutq")
color = Color(0, 0, 0, 0.980392)
script = ExtResource("2_y7mer")

[node name="pause_background" parent="." instance=ExtResource("3_xjx3r")]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -253.0
offset_top = 48.0
offset_right = 253.0
offset_bottom = 268.0
grow_horizontal = 2
theme_override_constants/separation = 12

[node name="level_name" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_font_sizes/font_size = 96
text = "You Have Rescued Your Dog"
horizontal_alignment = 1

[node name="time_box" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="badge" type="TextureRect" parent="VBoxContainer/time_box"]
visible = false
layout_mode = 2
expand_mode = 3

[node name="new_time" type="Label" parent="VBoxContainer/time_box"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 72
text = "00:00:000"
horizontal_alignment = 1

[node name="new_best_time" type="Label" parent="VBoxContainer/time_box"]
visible = false
modulate = Color(0, 0.882353, 0.517647, 1)
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "NEW
BEST!"
horizontal_alignment = 1

[node name="main" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="main_content" type="HBoxContainer" parent="main"]
layout_mode = 2
theme_override_constants/separation = 48
alignment = 1

[node name="scores_and_xp" type="HBoxContainer" parent="main/main_content"]
custom_minimum_size = Vector2(600, 700)
layout_mode = 2
theme_override_constants/separation = 32

[node name="score" type="VBoxContainer" parent="main/main_content/scores_and_xp"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="best_time_section" type="HBoxContainer" parent="main/main_content/scores_and_xp/score"]
layout_mode = 2
alignment = 1

[node name="best_time_badge" type="TextureRect" parent="main/main_content/scores_and_xp/score/best_time_section"]
layout_mode = 2
texture = ExtResource("4_y8tmw")
expand_mode = 3

[node name="time" type="VBoxContainer" parent="main/main_content/scores_and_xp/score/best_time_section"]
layout_mode = 2

[node name="best_time_label" type="Label" parent="main/main_content/scores_and_xp/score/best_time_section/time"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "00:00:000"

[node name="label" type="Label" parent="main/main_content/scores_and_xp/score/best_time_section/time"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 36
text = "Best Time"

[node name="pawprints" type="VBoxContainer" parent="main/main_content/scores_and_xp"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
alignment = 1

[node name="diamond" type="HBoxContainer" parent="main/main_content/scores_and_xp/pawprints"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="main/main_content/scores_and_xp/pawprints/diamond"]
layout_mode = 2
expand_mode = 3

[node name="diamond_time_label" type="Label" parent="main/main_content/scores_and_xp/pawprints/diamond"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "59:59:000"
horizontal_alignment = 1
vertical_alignment = 2

[node name="gold" type="HBoxContainer" parent="main/main_content/scores_and_xp/pawprints"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="main/main_content/scores_and_xp/pawprints/gold"]
layout_mode = 2
expand_mode = 3

[node name="gold_time_label" type="Label" parent="main/main_content/scores_and_xp/pawprints/gold"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "59:59:000"
horizontal_alignment = 1
vertical_alignment = 2

[node name="silver" type="HBoxContainer" parent="main/main_content/scores_and_xp/pawprints"]
layout_mode = 2
alignment = 1

[node name="silver_texture" type="TextureRect" parent="main/main_content/scores_and_xp/pawprints/silver"]
layout_mode = 2
expand_mode = 3

[node name="silver_time_label" type="Label" parent="main/main_content/scores_and_xp/pawprints/silver"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "59:59:000"
horizontal_alignment = 1
vertical_alignment = 2

[node name="bronze" type="HBoxContainer" parent="main/main_content/scores_and_xp/pawprints"]
layout_mode = 2
alignment = 1

[node name="TextureRect" type="TextureRect" parent="main/main_content/scores_and_xp/pawprints/bronze"]
layout_mode = 2
expand_mode = 3

[node name="bronze_time_label" type="Label" parent="main/main_content/scores_and_xp/pawprints/bronze"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 48
text = "59:59:000"
horizontal_alignment = 1
vertical_alignment = 2

[node name="leaderboard" type="VBoxContainer" parent="main/main_content"]
custom_minimum_size = Vector2(1000, 700)
layout_mode = 2

[node name="leaderboard_label" type="Label" parent="main/main_content/leaderboard"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
text = "Leaderboards"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="main/main_content/leaderboard"]
custom_minimum_size = Vector2(1050, 600)
layout_mode = 2

[node name="score_container" type="VBoxContainer" parent="main/main_content/leaderboard/ScrollContainer"]
custom_minimum_size = Vector2(800, 500)
layout_mode = 2

[node name="ScoreItem" parent="main/main_content/leaderboard/ScrollContainer/score_container" instance=ExtResource("9_nda4h")]
layout_mode = 2

[node name="buttons" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 48.0
offset_top = 48.0
offset_right = 336.0
offset_bottom = 252.0
theme_override_constants/separation = 12

[node name="restart_button" type="Button" parent="buttons"]
custom_minimum_size = Vector2(288, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_7or8m")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wngb5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ki7h5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ami28")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lk4b2")
text = "Restart Level"

[node name="level_select_button" type="Button" parent="buttons"]
custom_minimum_size = Vector2(288, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_7or8m")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wngb5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ki7h5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ami28")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lk4b2")
text = "Level Select"

[node name="settings_button" type="Button" parent="buttons"]
custom_minimum_size = Vector2(288, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_7or8m")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wngb5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ki7h5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ami28")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lk4b2")
text = "Settings"

[node name="main_menu_button" type="Button" parent="buttons"]
custom_minimum_size = Vector2(288, 60)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_pressed_color = Color(0.87451, 0.87451, 0.87451, 1)
theme_override_colors/font_hover_color = Color(0.52549, 0.52549, 0.52549, 1)
theme_override_colors/font_focus_color = Color(0.454902, 0.454902, 0.454902, 1)
theme_override_colors/font_hover_pressed_color = Color(0.698039, 0.698039, 0.698039, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 36
theme_override_styles/normal = SubResource("StyleBoxEmpty_7or8m")
theme_override_styles/hover = SubResource("StyleBoxEmpty_wngb5")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ki7h5")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ami28")
theme_override_styles/focus = SubResource("StyleBoxEmpty_lk4b2")
text = "Main Menu"

[node name="settings_menu" parent="." instance=ExtResource("10_vxanx")]
visible = false

[node name="transition" parent="." instance=ExtResource("11_fi5xr")]
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="pressed" from="buttons/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="buttons/level_select_button" to="." method="_on_level_select_button_pressed"]
[connection signal="pressed" from="buttons/settings_button" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="buttons/main_menu_button" to="." method="_on_main_menu_button_pressed"]
[connection signal="hide_menu" from="settings_menu" to="." method="_on_hide_menu"]
